@@ -399,14 +399,14 @@
                 xanchor=right
                 yanchor=fixed
             [/unit_image]
-            [unit_description]
+            [unit_name]
                 id=unit-description
                 font_size={DEFAULT_FONT_NORMAL}
                 ref=middle-right-panel
                 rect="=+9,=+3,=-2,+18"
                 xanchor=right
                 yanchor=fixed
-            [/unit_description]
+            [/unit_name]
             [unit_type]
                 id=unit-type
                 font_size={DEFAULT_FONT_SMALL}
