@@ -418,14 +418,14 @@
                 xanchor=right
                 yanchor=fixed
             [/unit_image]
-            [unit_description]
+            [unit_name]
                 id=unit-description
                 font_size=14
                 ref=middle-right-panel
                 rect="=+9,=+3,+72,+18"
                 xanchor=right
                 yanchor=fixed
-            [/unit_description]
+            [/unit_name]
             [unit_traits]
                 id=unit-traits
                 font_size=12
