@@ -20,7 +20,9 @@
 #include <map>
 
 namespace {
-	const std::string report_names[] = { "unit_description", "unit_type",
+	// the first one is for backward compatibility (should be removed in v1.5.3)
+	const std::string report_names[] = { "unit_description", 
+		"unit_name", "unit_type",
 		"unit_race", "unit_level", "unit_side", "unit_amla",
 		"unit_traits", "unit_status", "unit_alignment", "unit_abilities",
 		"unit_hp", "unit_xp", "unit_advancement_options", "unit_moves",
